[gd_scene load_steps=2 format=3 uid="uid://yl78ppbsj84t"]

[ext_resource type="Script" path="res://scripts/powerup_selection_ui.gd" id="1"]

[node name="PowerupSelectionUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
process_mode = 3
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "CHOOSE A POWERUP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Option1" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Option 1
Description"

[node name="Option2" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Option 2
Description"

[node name="Option3" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Option 3
Description"
